# emerge-engine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LP_MPM_SPEC.md  PHYSICS_PROOFS.md  README.md  diag_out.txt  diag_out2.txt  evolved_leg_feedback_genome.txt  evolved_leg_genome.txt  headless_run.ndjson
.github/ISSUE_TEMPLATE/: bug_report.md  material_request.md  performance.md
.github/workflows/: ci.yml
benches/: scaling.rs
crates/energy/: README.md
crates/energy/src/: conservation.rs  lib.rs  pairwise.rs
crates/energy/src/electromagnetism/: charges.rs  fields.rs  mod.rs
crates/energy/src/thermodynamics/: thermal.rs
crates/energy/src/waves/: propagation.rs  wave_equation.rs
crates/forces/: README.md
crates/forces/src/: lib.rs
crates/forces/src/core/: gravity.rs  gravity_math.rs  mod.rs  newton_laws.rs
crates/matter/: README.md
examples/: basic_creature.rs  basic_fluids.rs  basic_fluids_gpu.rs  basic_jellies.rs  basic_jellies_gpu.rs  basic_mixed.rs  basic_sand.rs  basic_sand_gpu.rs  basic_showcase.rs  basic_showcase_gpu.rs  basic_snow.rs  basic_snow_gpu.rs  channel_flow.rs  day_night_thermal_gpu.rs  debug_gpu_active_blocks.rs  debug_gpu_water_test.rs  debug_gpu_water_trace.rs  debug_lp_creature_stability.rs  debug_lp_creature_stability_gpu.rs  diff_neohookean_toy.rs  fire_spread.rs  grass_field.rs  headless.rs  interactive_creature.rs  jellies_cpu_ref.rs  latent_heat.rs  material_sandbox_gpu.rs  mixture_sand_water.rs  render_physics.rs  resource_regrowth_gpu.rs  slip_hopper.rs  snake_on_terrain.rs  snake_on_terrain_gpu.rs  stress_cfl_scan_50k.rs  stress_realtime_scaling.rs  trophic_predation_demo.rs  validate_materials.rs  walking_creature.rs  wind_around_obstacle_gpu.rs
src/: boundary.rs  lib.rs  particle.rs  prelude.rs  transfer.rs
src/acoustics/: mod.rs  wave_equation.rs
src/control/: lnn.rs  mod.rs
src/diagnostics/: logger.rs  mod.rs  per_material.rs  plugin.rs  reporting.rs  rules.rs  snapshot.rs
src/electromagnetics/: fields.rs  interactions.rs  mod.rs
src/fields/: buoyancy.rs  chemotaxis.rs  confinement.rs  coulomb.rs  em.rs  force_field.rs  gravity.rs  mod.rs  n_body.rs
src/forces/boundary/: ratchet_friction.rs
src/gpu/: buffers.rs  mod.rs  pipeline.rs
src/gpu/shaders/: apply_impulses.wgsl  force_fields.wgsl  g2p.wgsl  grid_clear.wgsl  grid_update.wgsl  p2g.wgsl  particle_sort.wgsl  particles_update.wgsl
src/grid/: kernel.rs  mod.rs
src/materials/: bingham.rs  corotated.rs  elastic.rs  fluid.rs  granular_fluid.rs  mod.rs  nacc.rs  params.rs  physical_props.rs  rankine.rs  registry.rs  sand.rs  sand_mui.rs  snow.rs  svd.rs  utils.rs  viscoelastic.rs  von_mises.rs
src/matter/: particle.rs
src/matter/materials/: corotated.rs  elastic.rs  granular_fluid.rs  mod.rs  physical_props.rs  sand_mui.rs
src/matter/materials/elastic/: elastic_tests.rs
src/measures/: divergence.rs  mod.rs  spatial.rs
src/render/: mod.rs
src/render/shaders/: prep_instances.wgsl  render_particles.wgsl
src/runtime/: fixed_step.rs  mod.rs
src/solver/: boundary.rs  config.rs  cutoff.rs  density.rs  handle.rs  material_registry.rs  mod.rs  query.rs  solver.rs  spatial_hash.rs  svd.rs  transfer.rs
src/solver/materials/: corotated.rs  elastic.rs  fluid.rs  mod.rs  params.rs  sand.rs  snow.rs
src/spacetime/: diff.rs  transfer.rs
src/spacetime/diff/: backward.rs  body_plan.rs  config.rs  forward.rs  metrics.rs  stress.rs  tests.rs  train.rs
src/spacetime/grid/: contact.rs  contact_normal.rs  directional_grip.rs  mixture.rs  mod.rs
src/spacetime/solver/: config.rs  lifecycle.rs  mod.rs  particles.rs  step.rs
src/spacetime/transfer/: g2p.rs  g2p_tests.rs  p2g.rs  p2g_tests.rs  transfer_tests.rs
src/state/: grid.rs  mod.rs  particle.rs
src/systems/diagnostics/: logger.rs  snapshot.rs
src/systems/gpu/: buffers.rs  mod.rs  pipeline.rs  step_params.rs
src/systems/gpu/buffers/: readback.rs
src/systems/gpu/pipeline/: bind_groups.rs
src/systems/gpu/shaders/: apply_impulses.wgsl  force_fields.wgsl  g2p.wgsl  g2p_asflip_fused.wgsl  grid_clear.wgsl  grid_update.wgsl  p2g.wgsl  particle_sort.wgsl  particles_update.wgsl  resolve_contact.wgsl  resource_field.wgsl  thermal.wgsl
src/systems/gpu/solver/: encode_substep.rs  live_params.rs  mod.rs  particles.rs  readback.rs  spawn.rs  step.rs
src/systems/render/: color.rs  mod.rs  tests.rs
src/systems/render/shaders/: grid_volume.wgsl  prep_instances.wgsl
src/thermodynamics/: diffusion.rs  mod.rs  scalar_field.rs  transfer.rs
tests/: accuracy.rs  diagnostics.rs  extensibility.rs  gpu.rs  physics_correctness.rs  solver.rs  stress.rs
