[workspace]
members = [
    ".",
    # forces, energy, utils removed from workspace — Bevy-coupled, kept as reference in crates/.
    # Port math into emerge/src/ one ForceField at a time when LP needs them.
    # matter kept: future scope covers quantum/dark matter (may not be MPM-based).
    "crates/matter",
]

[package]
name = "emerge"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30", features = ["bytemuck"] }
nalgebra = { version = "0.34", features = ["glam030"] }
bytemuck = { version = "1", features = ["derive"] }
bevy = { version = "0.18", optional = true }
bevy_egui = { version = "0.39", optional = true }
wgpu = { version = "27", optional = true }

[features]
default = []
mpm_debug = []
bevy_examples = ["dep:bevy", "dep:bevy_egui"]
# GPU compute: P2G/G2P via wgpu compute shaders. Plasticity stays CPU-side year 1.
gpu = ["dep:wgpu"]
# Standalone debug renderer: instanced particle draw via wgpu. Requires gpu.
render = ["gpu"]

[profile.dev]
opt-level = 1  # Basic optimization for better dev performance

[profile.dev.package."*"]
opt-level = 3  # Full optimization for dependencies

[profile.release]
lto = "thin"
codegen-units = 1

[[example]]
name = "basic_fluids"
required-features = ["bevy_examples"]

[[example]]
name = "basic_jellies"
required-features = ["bevy_examples"]

[[example]]
name = "basic_mixed"
required-features = ["bevy_examples"]

[[example]]
name = "basic_snow"
required-features = ["bevy_examples"]

[[example]]
name = "basic_sand"
required-features = ["bevy_examples"]

[[example]]
name = "basic_jellies_gpu"
required-features = ["bevy_examples", "gpu"]

[[example]]
name = "basic_sand_gpu"
required-features = ["bevy_examples", "gpu"]

[[example]]
name = "basic_snow_gpu"
required-features = ["bevy_examples", "gpu"]
